@@ -31,7 +31,7 @@ ACE_RCSID (HTIOP,
            "$Id$")
 
 TAO::HTIOP::Connection_Handler::Connection_Handler (ACE_Thread_Manager *t)
-  : TAO::HTIOP::SVC_HANDLER (t,0,0),
+  : SVC_HANDLER (t,0,0),
     TAO_Connection_Handler (0)
 {
   // This constructor should *never* get called, it is just here to
@@ -44,7 +44,7 @@ TAO::HTIOP::Connection_Handler::Connection_Handler (ACE_Thread_Manager *t)
 
 TAO::HTIOP::Connection_Handler::Connection_Handler (TAO_ORB_Core *orb_core,
                                                     CORBA::Boolean flag)
-  : TAO::HTIOP::SVC_HANDLER (orb_core->thr_mgr (), 0, 0),
+  : SVC_HANDLER (orb_core->thr_mgr (), 0, 0),
     TAO_Connection_Handler (orb_core)
 {
   TAO::HTIOP::Transport* specific_transport = 0;
