@@ -1,3 +1,10 @@
+Thu Oct 28 14:46:55 2004  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * orbsvcs/orbsvcs/HTIOP/HTIOP_Completion_Handler.cpp:
+        * orbsvcs/orbsvcs/HTIOP/HTIOP_Connection_Handler.cpp:
+          Addressed MSVC 6.0 compiler problem with typedef'ed templates
+          declared within namespaces.
+
 Thu Oct 28 12:01:50 2004  Phil Mesnier  <mesnier_p@ociweb.com>
 
         * Release (CONTROLLED_FILES):
